// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> that renders a button should add classes when props are changed 1`] = `
<div>
  <button
    class="Button Button--isPrimary Button--isBlock Button--isLoading Button--size_large"
    type="button"
  >
    <span>
      Click me
    </span>
  </button>
</div>
`;

exports[`<Button> that renders a button should render an ancor element if href is defined 1`] = `
<div>
  <a
    class="Button"
    href="/"
  >
    Click me
  </a>
</div>
`;

exports[`<Button> that renders a button should render default button correctly 1`] = `
<div>
  <button
    class="Button"
    type="button"
  >
    Click me
  </button>
</div>
`;
